Fix some layout issues - Responsive

--- a/palaioGG/styles/main.css
+++ b/palaioGG/styles/main.css
@@ -263,7 +263,7 @@
 }
 
 .stripe-container {
-    position: relative;
+    position: inherit;
     /*border: 1px solid blue;*/
     height: 500px;
     top: -400px;
@@ -343,8 +343,8 @@
 .stripe_container_about_bottom {
     position: relative;
     /*border: 1px solid blue;*/
-    height: 500px;
-    bottom: -600px;
+    height: 290px;
+    bottom: 0;
 }
 
 .stripe4_wrapper {
@@ -377,8 +377,8 @@
     position: absolute;
     border-top: 5px solid black;
     border-radius: 20px;
-    left: -92px;
-    top: 57.35%;
+    left: -93px;
+    bottom: 0;
     z-index: 5;
     width: 1000px;
     transform: rotate(35deg);
@@ -389,7 +389,7 @@
     height: 400px;
     background-color: #7F7960;
     position: absolute;
-    top: 5px;
+    top: 4px;
 }
 
 #patch6 {
@@ -397,8 +397,8 @@
     height: 300px;
     background-color: #7F7960;
     position: absolute;
-    top: 144px;
-    left: -139px;
+    top: 149px;
+    left: -141px;
     transform: rotate(35deg);
     z-index: 1;
 }
@@ -429,10 +429,12 @@
     background-color: #E5DAAD;
     height: 100vh;
     z-index: 10;
+    position: relative;
 }
 
     .palaioGG .about .about-content {
-        margin-top: -600px;
+        position: absolute;
+        top: 20%;
         z-index: 5;
         padding-right: 30px;
         padding-left: 140px;
